--- a/ERP_Project/src/main/resources/application.properties
+++ b/ERP_Project/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.mvc.view.suffix=.jsp
 
 #mybatis 설정
 mybatis.mapper-locations=/mybatis/mappers/*.xml
+mybatis.type-aliases-package=kr.or.erp.employee.model.vo
 mybatis.configuration.jdbc-type-for-null=NULL
 
 #컬럼명에 _처리가 되어있는것을 카멜 표기법으로 자동 변환해주는 설정
@@ -25,7 +26,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #데이터베이스 정보 등록
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=SPRING
-spring.datasource.password=SPRING
+spring.datasource.username=ERP
+spring.datasource.password=ERP
 
 #spring.web.resources.static-locations=/resources/static/
