--- a/ERP_Project/src/main/resources/application.properties
+++ b/ERP_Project/src/main/resources/application.properties
@@ -22,6 +22,8 @@ mybatis.configuration.jdbc-type-for-null=NULL
 #컬럼명에 _처리가 되어있는것을 카멜 표기법으로 자동 변환해주는 설정
 mybatis.configuration.map-underscore-to-camel-case=true
 
+mybatis.type-aliases-package=kr.or.erp.attemdance.model.vo
+
 #데이터베이스 정보 등록
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
