--- a/ERP_Project/pom.xml
+++ b/ERP_Project/pom.xml
@@ -123,6 +123,11 @@
 		    <version>2.17.0</version>
 		</dependency>
 		
+		<!-- websocket DI -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 		
 	</dependencies>
 	
